--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <body>
         <h1>inElastic Energy Picker</h1>
         <div>
-            <h2>EDX edges</h2>
+            <h2>EDX peak energies</h2>
             <div id='plotEDX'></div>
         </div>
 
 
+        <a href='https://github.com/noahschnitzer/iEEP'>Site source</a>
+        <a href='https://github.com/sukhsung/elements'>Data source</a>
         <script src="https://d3js.org/d3.v7.min.js"></script>
         <script type="text/javascript" src='scr.js'></script>
     </body>
