--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <h1>inElastic Energy Picker</h1>
         <div>
             <h2>EDX peak energies</h2>
+            <p>Click and drag to zoom in to an energy range, double click to reset. </p>
             <div id='plotEDX'></div>
         </div>
 
