--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <a href='https://github.com/sukhsung/elements'>Data source</a>
         <script src="https://d3js.org/d3.v7.min.js"></script>
         <script type="text/javascript" src='scr.js'></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </body>
 </html>
