slightly looking nicer

--- a/index.html
+++ b/index.html
@@ -4,38 +4,37 @@
         <title>inElastic Energy Picker</title>
     </head>
     <body>
-        <h1>inElastic Energy Picker</h1>
-        <div>
+        <div class="textcenter">
+            <h1>inElastic Energy Picker</h1>
+        </div>
+        
+        <div class="textcenter">
             <h2>EDX peak energies</h2>
             <p>Click and drag to zoom in to an energy range, double click to reset. </p>
-            <div id='plotEDX'></div>
+            <div id='plotEDX' class="textcenter"></div>
         </div>
-        <div>
-            Search EDS Edges
-        </div>
-        <div>
-            <input type="text" 
-                    style="text-align:right;" 
-                    id="E_search" 
-                    value="0"
-                    size= 3
-                    oninput="textfieldChange()">
-            <span>&#177;</span>
-            <input type="text" 
-                    style="text-align:right;" 
-                    id="dE_search" 
-                    value="0.1" 
-                    size = 3
-                    oninput="textfieldChange()">keV
-        </div>
-        <div id="E_Results">
-
+        
+        <div class="textcenter">
+            <h2>Search EDS Edges</h2>
+            <div>
+                <input type="text" id="E_search" class="searchfield"
+                        value="0" size= 3
+                        oninput="textfieldChange()">
+                <span>&#177;</span>
+                <input type="text" id="dE_search" class="searchfield"
+                        value="0.1" size = 3
+                        oninput="textfieldChange()"> keV<br></br>
+            </div>
+            <div id="E_Results" class="textcenter">
+            </div>
         </div>
 
-        <a href='https://github.com/noahschnitzer/iEEP'>Site source</a>
-        <a href='https://github.com/sukhsung/elements'>Data source</a>
-        <script src="https://d3js.org/d3.v7.min.js"></script>
-        <script type="text/javascript" src='scr.js'></script>
+        <div class="footer textcenter">
+            <a href='https://github.com/noahschnitzer/iEEP'>Site source</a>
+            <a href='https://github.com/sukhsung/elements'>Data source</a>
+            <script src="https://d3js.org/d3.v7.min.js"></script>
+            <script type="text/javascript" src='scr.js'></script>
+        </div>
         <link rel="stylesheet" type="text/css" href="style.css">
     </body>
 </html>
