--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 
         <script src="https://d3js.org/d3.v7.min.js"></script>
-        <script src="/external_scripts/jquery-3.6.3.min.js"></script>
-        <script src="/external_scripts/jquery.tablesorter.min.js"></script>
+        <script src="./external_scripts/jquery-3.6.3.min.js"></script>
+        <script src="./external_scripts/jquery.tablesorter.min.js"></script>
 
         <script type="text/javascript" src='scr.js'></script>
         <link rel="stylesheet" type="text/css" href="style.css">
