non functioning toggle switch included

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <body>
         <div class="textcenter">
             <h1>inElastic Energy Picker</h1>
+            <br></br>
+            <div class="button r" id="button-1">
+                <input type="checkbox" class="checkbox" />
+                <div class="knobs"></div>
+                <div class="layer"></div>
+            </div>
         </div>
         
         <div class="textcenter">
