basic range based filtering on table

--- a/index.html
+++ b/index.html
@@ -50,15 +50,21 @@
             </div>
         </div>
 
-        <div>
+        <div id="tablecont">
             <h2> WIP table</h2>
             <table id="tableEDX">
                 <thead>
                     <tr>
                         <th>Element</th>
-                        <th>Z</th>
+                        <th>Z
+                            <input type="text" value=0  id="Zmin" class="filterinput" oninput="filterChange()" ></input>
+                            <input type="text" value=95  id="Zmax" class="filterinput" oninput="filterChange()" ></input>
+                        </th>
                         <th>Edge</th>
-                        <th>E</th>
+                        <th>E
+                            <input type="text" value=0  id="Emin" class="filterinput" oninput="filterChange()" ></input>
+                            <input type="text" value=112  id="Emax" class="filterinput" oninput="filterChange()" ></input>
+                        </th>
                     </tr>
                 </thead>
                 <tbody id="tableEDX_body">
