added edge filtering to table. Not longterm solution -- will break if edge displayed in table doesn't exactly match backend lookup...

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                     <tr>
                         <th>Element</th>
                         <th>Z
-                            <input type="text" value=0  id="Zmin" class="filterinput" oninput="filterChange()" ></input>
-                            <input type="text" value=95  id="Zmax" class="filterinput" oninput="filterChange()" ></input>
+                            <input type="text" value=0  id="Zmin" class="filterinput" oninput="tableFilterChange()" ></input>
+                            <input type="text" value=95  id="Zmax" class="filterinput" oninput="tableFilterChange()" ></input>
                         </th>
                         <th>Edge</th>
                         <th>E
-                            <input type="text" value=0  id="Emin" class="filterinput" oninput="filterChange()" ></input>
-                            <input type="text" value=112  id="Emax" class="filterinput" oninput="filterChange()" ></input>
+                            <input type="text" value=0  id="Emin" class="filterinput" oninput="tableFilterChange()" ></input>
+                            <input type="text" value=112  id="Emax" class="filterinput" oninput="tableFilterChange()" ></input>
                         </th>
                     </tr>
                 </thead>
